<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:background="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_lostfound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/tv_judul_lostfound"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_lostfound"
            android:padding="@dimen/card_margin"
            android:text="@string/title_placeholder"
            android:textStyle="bold"/>

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/tv_judul_lostfound"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:id="@+id/tv_tulisan_contact"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_1"
            android:padding="@dimen/card_margin"
            android:text="Kontak Pemilik/Penemu :"
            android:textColor="?android:textColorSecondary"/>

        <TextView
            android:id="@+id/tv_kontak_lostfound"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_1"
            android:layout_toRightOf="@+id/tv_tulisan_contact"
            android:padding="@dimen/card_margin"
            android:text="@string/kontak_label"
            android:textColor="?android:textColorSecondary"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_detail_lostfound"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_kontak_lostfound"
            android:padding="@dimen/card_margin"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="50"
            android:singleLine="true"
            android:text="@string/lost_info_placeholder" />

    </RelativeLayout>

</android.support.v7.widget.CardView>